--- a/package.json
+++ b/package.json
@@ -2,5 +2,28 @@
   "dependencies": {
     "inquirer": "^8.2.4",
     "jest": "^29.5.0"
-  }
+  },
+  "name": "team-profile-generator",
+  "description": "",
+  "version": "1.0.0",
+  "main": "index.js",
+  "directories": {
+    "lib": "lib",
+    "test": "tests"
+  },
+  "devDependencies": {},
+  "scripts": {
+    "test": "jest"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Jmbanefo/Team-Profile-Generator.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Jmbanefo/Team-Profile-Generator/issues"
+  },
+  "homepage": "https://github.com/Jmbanefo/Team-Profile-Generator#readme"
 }
